WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200453
[iPadOS] Unable to increase zoom level on Google using the Aa menu
https://bugs.webkit.org/show_bug.cgi?id=200453
Summary
[iPadOS] Unable to increase zoom level on Google using the Aa menu
Wenson Hsieh
Reported
2019-08-05 16:06:32 PDT
<
rdar://problem/52278579
>
Attachments
Patch
(15.59 KB, patch)
2019-08-05 19:28 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-08-05 19:28:22 PDT
Created
attachment 375596
[details]
Patch
Tim Horton
Comment 2
2019-08-05 22:01:41 PDT
Comment on
attachment 375596
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=375596&action=review
> Source/WebCore/page/ViewportConfiguration.cpp:250 > + return clampTo<double>(initialScale, shouldIgnoreScalingConstraints ? m_defaultConfiguration.minimumScale : m_configuration.minimumScale, m_configuration.maximumScale);
Woah, there are some other places we should use this
WebKit Commit Bot
Comment 3
2019-08-06 07:49:31 PDT
Comment on
attachment 375596
[details]
Patch Clearing flags on attachment: 375596 Committed
r248292
: <
https://trac.webkit.org/changeset/248292
>
WebKit Commit Bot
Comment 4
2019-08-06 07:49:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug